allowed the new domain